cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8.txt
../dataset/june2020_dataset_copy/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/war/WarHistogram.java:45: error: (argument) $$ 4 $$ arg0 $$ List.add $$ @CalledMethods Data</*RAW*/> $$ ? extends @CalledMethods Object $$ ( 1687, 1719 ) $$ incompatible argument for parameter arg0 of List.add.
            series1.getData().add(new XYChart.Data(groupName, pct));
                                  ^
  found   : @CalledMethods Data</*RAW*/>
  required: ? extends @CalledMethods Object
Note: ../dataset/june2020_dataset_copy/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/DefaultBattleAccessorTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
